force-app/main/default/objects/Totali_Budget_Anno__c/fields/Ammontare_Pagamenti_Da_Pagare__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Pagamenti_Da_Pagare__c</fullName>
    <label>Ammontare Pagamenti Da Pagare</label>
    <summarizedField>Pagamento_Shadow__c.Amount_Static__c</summarizedField>
    <summaryFilterItems>
        <field>Pagamento_Shadow__c.Status_Static__c</field>
        <operation>notEqual</operation>
        <value>Pagato</value>
    </summaryFilterItems>
    <summaryForeignKey>Pagamento_Shadow__c.Totali_Budget_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>