force-app/main/default/objects/Totali_Budget_Anno__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>GiftDesignation</referenceTo>
    <relationshipLabel>Totali Budget Anno</relationshipLabel>
    <relationshipName>Totali_Budget_Anno</relationshipName>
    <type>Lookup</type>
</CustomField>