force-app/main/default/objects/Totali_Budget_Anno__c/fields/Donatore__c.field-meta.xml
<CustomField>
    <fullName>Donatore__c</fullName>
    <label>Donatore</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Totali Budget Anno</relationshipLabel>
    <relationshipName>Totali_Budget_Anno</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>