force-app/main/default/objects/Totali_Budget_Anno__c/fields/Numero_Allocazioni_Budget__c.field-meta.xml
<CustomField>
    <fullName>Numero_Allocazioni_Budget__c</fullName>
    <label>Numero Allocazioni Budget</label>
    <summaryForeignKey>Distribuzione_Shadow__c.Totali_Budget_Anno__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>