force-app/main/default/objects/Totali_Budget_Anno__c/fields/Numero_di_Fatture__c.field-meta.xml
<CustomField>
    <fullName>Numero_di_Fatture__c</fullName>
    <label>Numero di Fatture</label>
    <summaryForeignKey>Fattura_Shadow__c.Totali_Budget_Anno__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>