force-app/main/default/objects/Totali_Budget_Anno__c/fields/Totale_Allocato_Budget__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato_Budget__c</fullName>
    <label>Totale Allocato Budget</label>
    <summarizedField>Distribuzione_Shadow__c.Amount_Static__c</summarizedField>
    <summaryForeignKey>Distribuzione_Shadow__c.Totali_Budget_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>