force-app/main/default/objects/Totali_Budget_Anno__c/fields/Totale_Allocato_Budget_Pagato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato_Budget_Pagato__c</fullName>
    <label>Totale Allocato Budget Pagato</label>
    <summarizedField>Distribuzione_Shadow__c.Amount_Static__c</summarizedField>
    <summaryFilterItems>
        <field>Distribuzione_Shadow__c.Status_Static__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Distribuzione_Shadow__c.Totali_Budget_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>