force-app/main/default/objects/Totali_Budget_Anno__c/fields/Totale_Numero_Visite__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Visite__c</fullName>
    <label>Totale Numero Visite</label>
    <summarizedField>Fattura_Shadow__c.Totale_Numero_di_Visite_Static__c</summarizedField>
    <summaryForeignKey>Fattura_Shadow__c.Totali_Budget_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>